--- a/css/styles.less
+++ b/css/styles.less
@@ -9,6 +9,9 @@ body {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   line-height: 1.6;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 // colors
@@ -23,13 +26,31 @@ textarea {
   font-family: inherit;
 }
 
+.container {
+  width: 95%;
+  margin: 0 auto;
+}
+
+header {
+  padding-top: 2rem;
+}
+
+main {
+  flex: 1;
+}
+
+footer {
+  background-color: @text-accent;
+  padding: 0;
+  padding: 0.6rem;
+}
+
 h1 {
   font-size: 1.125em;
 }
 
-.container {
-  width: 95%;
-  margin: 0 auto;
+h2 {
+  font-size: 0.875em;
 }
 
 .btn {
@@ -39,11 +60,26 @@ h1 {
   font-size: 1em;
 }
 
-header {
-  padding-top: 2rem;
+.btn-primary {
+  color: @bg-color;
+  border: none;
+  border-radius: 8px;
+  background-color: @text-accent;
+  font-size: 1em;
+  padding: 0.4rem;
 }
 
-.budget-scope {
+.btn-action {
+  color: @text-accent;
+  border: none;
+  background-color: #f5f5f5;
+  font-size: 1em;
+  border-radius: 100%;
+  width: 2.4rem;
+  height: 2.4rem;
+}
+
+.category-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -88,4 +124,72 @@ header {
   height: 100%;
   background-color: @text-accent;
   transition: width 0.8s ease;
+}
+
+.centered {
+  display: flex;
+  justify-content: center;
+}
+
+.transaction {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+  padding: 1rem;
+  background-color: #f5f5f5;
+  border-radius: 8px;
+
+  i {
+    font-size: 1.2rem;
+    color: @text-accent;
+  }
+
+  h3 {
+    font-size: 1rem;
+  }
+
+  p {
+    font-size: 0.75rem;
+  }
+
+  h4 {
+    font-size: 1rem;
+    font-weight: 500;
+    white-space: nowrap;
+    color: red;
+  }
+}
+
+.modal-wrapper {
+  position: fixed;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.15);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.new-transaction {
+  background: white;
+  padding: 2rem;
+  border-radius: 8px;
+  max-width: 90%;
+  width: 400px;
+}
+
+form label,
+form input,
+form select {
+  display: block;
+  width: 100%;
+  margin-bottom: 0.7rem;
+}
+
+form input,
+form select {
+  border: 1px solid #e2e2e2;
+  border-radius: 8px;
+  padding: 0.4rem;
 }
